# gzpy

./: ATTRIBUTIONS.md  CITATION.cff  README.md  pyproject.toml
examples/: computation_time.py  demo.py  load_samples.py
examples/sample_data/fishing_boat/source/: boat_model.blend  boat_model.fbx  boat_model.mtl  modified_boat_model.blend
examples/sample_data/sailboat-game-asset/source/: MergedFull.blend  MergedFull.fbx  MergedFull.mtl
src/gzpy/: __init__.py  constants.py
src/gzpy/core/: __init__.py  core.py  mesh.py  visualize.py
src/gzpy/exact/: __init__.py  exact.py  visualize.py
src/gzpy/sampling/: __init__.py  sampling.py  visualize.py
tests/: test_core.py  test_sampled_points.py
